# odpi_rs

./: Cargo.toml  README.md
odpi_rs/: Cargo.toml  README.md
odpi_rs/examples/: demo_fetch.rs
odpi_rs/examples/common/: mod.rs
odpi_rs/src/: __docs__.rs  aq.rs  conn.rs  context.rs  enums.rs  error.rs  lib.rs  soda.rs  stmt.rs  subscr.rs  types.rs  utils.rs  version_info.rs
odpi_rs/src/__docs__/: enums.md  enums.rs  functions.md  functions.rs
odpi_rs/src/aq/: deq_options.rs  enq_options.rs  enums.rs  msg_props.rs  msg_recipient.rs  queue.rs
odpi_rs/src/conn/: access_token.rs  app_context.rs  common_create_params.rs  conn_create_params.rs  conn_info.rs  enums.rs  pool.rs  pool_create_params.rs  sharding_key_column.rs
odpi_rs/src/context/: context_create_params.rs
odpi_rs/src/soda/: coll.rs  coll_cursor.rs  db.rs  doc.rs  doc_cursor.rs  enums.rs  oper_options.rs
odpi_rs/src/stmt/: enums.rs  query_info.rs  stmt_info.rs  var.rs
odpi_rs/src/subscr/: enums.rs  message.rs  subscr_create_params.rs
odpi_rs/src/task/: async_std.rs  is_sync.rs  smol.rs  tokio.rs
odpi_rs/src/types/: annotation.rs  data_type_info.rs  enums.rs  from_sql.rs  interval_ds.rs  interval_ym.rs  json.rs  lob.rs  native_value.rs  object.rs  object_attr.rs  object_type.rs  rowid.rs  timestamp.rs  vector.rs  vector_info.rs  xid.rs
odpi_rs/src/types/json/: array.rs  json_node.rs  native_value.rs  object.rs
odpi_rs_procmacro/: Cargo.toml
odpi_rs_procmacro/src/: attr_macro.rs  lib.rs  odpic_doc.rs
odpi_rs_procmacro/src/runtime/: async.rs  sync.rs
