[package]
name = "odpi_rs"
version = "0.0.0-dev"
edition = "2021"
rust-version = "1.68.0"

[features]
tokio = ["dep:tokio", "is_async", "odpi_rs_procmacro/tokio"]
async-std = ["dep:async-std", "is_async", "odpi_rs_procmacro/async-std"]
smol = ["dep:smol", "is_async", "odpi_rs_procmacro/smol"]

# Don't enable the following feature directly.
# Use tokio, async-std or smol instead.
is_async = []

[dependencies]
bitflags = "2.8.0"
once_cell = "1.20.2"
maybe-async = "0.2"
odpi_rs_procmacro = { path = "../odpi_rs_procmacro" }
odpic-sys = { version = "=0.2.0", features = ["separate_blocking"] }
thiserror = "2.0.11"

tokio = { version = "1", features = ["rt"], optional = true }
async-std = { version = "1", optional = true }
smol = { version = "2", optional = true }
